# CoolLedDiy

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
coolled/: __init__.py  app.py
coolled/ble/: __init__.py  connection.py  scanner.py  transport.py
coolled/fonts/: __init__.py  font_reader.py
coolled/fonts/data/: UNICODE12  UNICODE16
coolled/gui/: __init__.py  animation_tab.py  control_tab.py  debug_tab.py  drawing_tab.py  image_tab.py  main_window.py  scanner_tab.py  text_tab.py
coolled/gui/widgets/: __init__.py  drawing_grid.py  hex_viewer.py  led_preview.py  packet_dissector.py  packet_list.py  stats_panel.py
coolled/image/: __init__.py  converter.py
coolled/models/: packet_log.py
coolled/protocol/: __init__.py  commands.py  commands_advanced.py  constants.py  crc32.py  device_type.py  framing.py  lzss.py  scan_record.py  text_encoding.py
coolled1248decomp/: .gitignore
tests/: test_commands.py  test_commands_advanced.py  test_crc32.py  test_device_type.py  test_framing.py  test_lzss.py  test_rgb444.py  test_scan_record.py  test_text_encoding.py
